--- a/src/app/components/aligned/aligned.component.html
+++ b/src/app/components/aligned/aligned.component.html
@@ -1,6 +1,6 @@
 <div class="alignment">
 
-  <app-network-graph [distanceMatrix]="distanceMatrix"></app-network-graph>
+<app-network-graph [distanceMatrix]="distanceMatrix"></app-network-graph>
 
   <div class="controls-wrapper">
     <!-- Display controls and download -->
@@ -34,6 +34,8 @@
         <mat-button-toggle value="volpiano">Volpiano</mat-button-toggle>
         <mat-button-toggle value="raw">Raw</mat-button-toggle>
       </mat-button-toggle-group>
+      <br>
+      {{ nAlignmentsShown }} sequences
     </div>
 
     <div class="widget-control">
