Re #3: Data can be added to existing dataset

--- a/src/app/components/chant-list/chant-list.component.html
+++ b/src/app/components/chant-list/chant-list.component.html
@@ -60,4 +60,5 @@
     </ng-container>
     <button mat-raised-button color="primary" (click)="export()">Export to CSV</button>
     <button mat-raised-button color="primary" (click)="createDataset()">Create Dataset</button>
+    <button mat-raised-button color="primary" (click)="addToDataset()">Add to dataset</button>
 </div>
