--- a/src/app/components/visualization/network-graph-wrapper/network-graph-wrapper.component.css
+++ b/src/app/components/visualization/network-graph-wrapper/network-graph-wrapper.component.css
@@ -1,8 +1,24 @@
-.network-wrapper {
-    display: flex;
-}
-  
+/*.network-wrapper {*/
+/*    display: flex;*/
+/*}*/
+
 .network {
     justify-content: start;
-    margin: 20px;
+    /*margin: 20px;*/
+}
+
+.single-network-container-div {
+  position: absolute;
+  margin-top: 15%;
+  margin-left: auto;
+  margin-right: auto;
+  width: fit-content;
+  top: 0;
+  left: 0;
+  right: 0;
+  /*border: 1px solid black;*/
+  background-color: white;
+  /*display: inline;*/
+  /*float: right;*/
+  box-shadow: 0px 2px 2px black;
 }
