Improving how network graphs are shown.

--- a/src/app/components/visualization/network-graph-wrapper/network-graph-wrapper.component.html
+++ b/src/app/components/visualization/network-graph-wrapper/network-graph-wrapper.component.html
@@ -8,6 +8,7 @@
           <app-network-graph
               [distanceMatrix]="distanceMatrix"
               [colorScheme]="colorScheme"
+              [distanceThreshold]="0.8"
               [networkType]="'chants'">
           </app-network-graph>
         </mat-card>
