--- a/src/app/components/aligned/aligned.component.css
+++ b/src/app/components/aligned/aligned.component.css
@@ -107,7 +107,7 @@ ul.widget-control {
 .alignment-scroll-viewport {
   width: 100%;
   height: 600px;
-  border: 1px solid blue;
+  border: 1px solid #3F51B5;
   margin-left: 10px;
 }
 
