Fixed bug in chant list Select all: it selected incomplete chants when they were hidden. Now, if incomplete chants are hidden, "Select all" does not select them.
More experimenting with graph visualization settings.

--- a/src/app/components/chant-list/chant-list.component.html
+++ b/src/app/components/chant-list/chant-list.component.html
@@ -13,7 +13,7 @@
     <ng-container>
       <mat-checkbox
         class="margin-right"
-        (change)="selectAll()"
+        (change)="selectAllVisible()"
         [(ngModel)]="selectedAll">
         Select/deselect all
         <span style="float: right; margin-left: 20px">(Selected: {{ nChantsSelected }})</span>
