Improvements in UI esp. for graphs, linking settings to graph rendering components.

--- a/src/app/components/aligned/aligned.component.html
+++ b/src/app/components/aligned/aligned.component.html
@@ -152,7 +152,8 @@
   </div>
 
   <app-network-graph-wrapper
-    [distanceMatrix]="distanceMatrix">
+    [distanceMatrix]="distanceMatrix"
+    [chants]="chantsMapForNetworkGraphs">
   </app-network-graph-wrapper>
 
 </div>
