--- a/src/app/components/settings/settings.component.css
+++ b/src/app/components/settings/settings.component.css
@@ -4,7 +4,7 @@ mat-card.settings-group {
 
 .settings-group-name {
   font-size: large;
-  font-weight: bold;
+  /*font-weight: bold;*/
   vertical-align: center;
   margin-top: 8px;
 }
