--- a/src/app/components/aligned/aligned.component.html
+++ b/src/app/components/aligned/aligned.component.html
@@ -40,7 +40,9 @@
       <ul class="widget-control">
         <li><button mat-raised-button (click)="saveAlignment()" color="primary" class="widget-control-button">Save</button>
             <button mat-raised-button (click)="downloadAlignedFasta()" color="primary" class="widget-control-button">Download FASTA</button>
-            <button mat-raised-button (click)="downloadAlignedJson()" color="primary" class="widget-control-button">Download JSON</button></li>
+            <button mat-raised-button (click)="downloadAlignedJson()" color="primary" class="widget-control-button">Download JSON</button>
+            <button mat-raised-button (click)="downloadPhyloNewick()" color="primary" class="widget-control-button">Download Newick</button>
+        </li>
         <li><button mat-raised-button (click)="doShowDistanceMatrix()" color="{{ showDistanceMatrixColor }}"
                     class="widget-control-button">Distance Matrix</button>
             <button mat-raised-button (click)="doShowChantNetwork()" color="{{ showChantNetworkColor }}"
