--- a/src/app/components/chant-details/chant-details.component.html
+++ b/src/app/components/chant-details/chant-details.component.html
@@ -55,12 +55,16 @@
       <mat-card-content>{{ chant.db_source.full_text }}</mat-card-content>
       <mat-card-subtitle>Genre</mat-card-subtitle>
       <mat-card-content>{{ genre }}</mat-card-content>
-      <mat-card-subtitle>Office</mat-card-subtitle>
-      <mat-card-content>{{ office }}</mat-card-content>
-      <mat-card-subtitle>Mode</mat-card-subtitle>
-      <mat-card-content>{{ chant.db_source.mode }}</mat-card-content>
+      <mat-card-subtitle>Source</mat-card-subtitle>
+      <mat-card-content>{{ chant.db_source.siglum }}
+        <ng-container *ngIf="chant.db_source.century_code">&nbsp;({{ humanReadableCentury }})</ng-container>
+      </mat-card-content>
+<!--      <mat-card-subtitle>Office</mat-card-subtitle>-->
+<!--      <mat-card-content>{{ office }}</mat-card-content>-->
+<!--      <mat-card-subtitle>Mode</mat-card-subtitle>-->
+<!--      <mat-card-content>{{ chant.db_source.mode }}</mat-card-content>-->
       <mat-card-subtitle>Cantus ID</mat-card-subtitle>
-      <mat-card-content>{{ chant.db_source.cantus_id }}</mat-card-content>
+      <mat-card-content><a href="http://cantusindex.org/id/{{ chant.db_source.cantus_id }}" target="_blank">{{ chant.db_source.cantus_id }}</a></mat-card-content>
       <mat-card-subtitle>Details</mat-card-subtitle>
       <mat-card-content>
         <a href="{{ chant.db_source.drupal_path }}">{{ chant.db_source.drupal_path }}</a>
