Fixed guide tree loading from saved alignments (guide_tree vs. guideTree naming, unified to guideTree).
DistanceMatrix: now also the rows have short labels, to keep cells as square as possible. The long name (incl. source sigla) are always visible upon mousedown on a cell.

--- a/src/app/components/distance-matrix/distance-matrix.component.html
+++ b/src/app/components/distance-matrix/distance-matrix.component.html
@@ -9,7 +9,7 @@
       </td>
     </tr>
     <tr class="distance-matrix" *ngFor="let name1 of names">
-      <td class="distance-matrix-header-column">{{ name1 }}</td>
+      <td class="distance-matrix-header-column">{{ getShortName(name1) }}</td>
       <td class="distance-matrix distance-matrix-cell"
           *ngFor="let name2 of names"
           style="background-color: rgb({{ backgroundColorRGB(allDistances.get(name1).get(name2)) }})"
