Improved guide tree naming & visualization.

--- a/src/app/components/aligned/aligned.component.html
+++ b/src/app/components/aligned/aligned.component.html
@@ -158,7 +158,9 @@
   <div *ngIf="showPhylogeneticTree"
        class="distance-matrix-wrapper">
     <app-phylogenetic-tree
-      [treeString]="alignment.guideTree">
+      [treeString]="alignment.guideTree"
+      [newickNamesDict]="alignment.newickNamesDict"
+      [chants]="alignment.iChants">
     </app-phylogenetic-tree>
   </div>
 
