fix csstyles that were destroyed by angular material v15

--- a/src/app/components/data-upload/data-upload.component.css
+++ b/src/app/components/data-upload/data-upload.component.css
@@ -12,6 +12,10 @@
   display: block;
 }
 
+::ng-deep .upload-content mat-card, ::ng-deep .selection-content mat-card{
+  padding: 10px;
+}
+
 .selection-content {
   width: fit-content;
   /*margin: auto;*/
