--- a/src/app/components/alignment-manager/alignment-manager.component.css
+++ b/src/app/components/alignment-manager/alignment-manager.component.css
@@ -10,6 +10,13 @@
   /*margin: auto;*/
   margin: 20px;
   display: block;
+  padding: 10px;
+}
+
+::ng-deep .selection-content mat-card {
+  padding: 10px;
+  margin: 20px;
+  display: block;
 }
 
 .selection-content {
