--- a/src/app/components/navigation/navigation.component.css
+++ b/src/app/components/navigation/navigation.component.css
@@ -6,4 +6,50 @@
 .searchBar {
     font-size: 15px;
     align-self: flex-end;
+    height: 60px;
+}
+
+/* Search bar, set radius to button borders */
+::ng-deep .searchBar .mat-mdc-text-field-wrapper {
+  border-radius: 10px !important;
+}
+
+/* Search bar, remove background color */
+::ng-deep .searchBar .mdc-text-field--filled:not(.mdc-text-field--outlined) {
+    background-color: transparent !important;
+}
+
+/* Search bar, colorize text placeholder to white */
+::ng-deep .searchBar .mdc-text-field:not(.mdc-text-field--disabled) .mdc-text-field__input::placeholder {
+    color: rgb(255, 255, 255);
+}
+
+/* Search bar, remove focus background color */
+::ng-deep .searchBar .mat-mdc-form-field-focus-overlay {
+    background-color: transparent !important;
+}
+
+/* Search bar, emphasise bottom border color when focused on */
+::ng-deep .searchBar .mdc-text-field--filled .mdc-line-ripple::after {
+    border-bottom: 2px solid rgb(255, 255, 255);
+}
+
+/* Search bar, input text white color */
+::ng-deep .searchBar .mdc-text-field:not(.mdc-text-field--disabled) .mdc-text-field__input {
+    color: rgb(255, 255, 255);
+}
+
+/* Search bar, change the color of caret (|) */
+::ng-deep .searchBar .mdc-text-field .mdc-text-field__input {
+    caret-color: rgb(255, 255, 255);
+}
+
+/* Search bar, remove the 'cross' cancel 'X" button */
+::ng-deep .searchBar input[type="search"]::-webkit-search-cancel-button {
+    display: none;
+  }
+
+/* Search bar, set the hinter's height to 10px, should we set it to display: none; ? */
+::ng-deep .searchBar .mat-mdc-form-field-subscript-wrapper.mat-mdc-form-field-bottom-align {
+    height: 10px;
 }
