--- a/src/app/components/guide-tree/guide-tree.component.html
+++ b/src/app/components/guide-tree/guide-tree.component.html
@@ -1,5 +1,5 @@
-<mat-card cdkDrag class="phylogenetic-tree-card">
-  <h3 align="center">Phylogenetic tree</h3>
+<mat-card cdkDrag class="guide-tree-card">
+  <h3 align="center">Guide tree</h3>
   <br>
 <!--  <span>{{ treeString }}</span>-->
 <!--  <figure id="phylotree"></figure>-->
