--- a/src/app/components/guide-tree/guide-tree.component.css
+++ b/src/app/components/guide-tree/guide-tree.component.css
@@ -1,5 +1,5 @@
 
-.phylogenetic-tree-card {
+.guide-tree-card {
   width: fit-content;
   background-color: white;
   overflow: visible;
@@ -103,6 +103,6 @@ h3 {
 .tree-widget {
 }
 
-mat-card.phylogenetic-tree-card {
+mat-card.guide-tree-card {
   padding: 20px;
 }
