--- a/src/app/components/aligned/aligned.component.css
+++ b/src/app/components/aligned/aligned.component.css
@@ -86,7 +86,21 @@ div.distance-matrix-wrapper {
   /*float: right;*/
 }
 
+div.widget-control-wrapper {
+  display: flex;
+  flex-direction: column;
+  unicode-bidi: isolate;
+}
+
 div.widget-control {
+  display: inline-block;
+  margin-left: 20px;
+  margin-right: 20px;
+  flex-grow: 1;
+}
+
+div.redirect-widget-control {
+  margin-top: auto;
   display: inline-block;
   margin-left: 20px;
   margin-right: 20px;
