--- a/src/app/components/aligned/aligned.component.html
+++ b/src/app/components/aligned/aligned.component.html
@@ -35,25 +35,33 @@
       <br>
       {{ nAlignmentsShown }} sequences
     </div>
-
-    <div class="widget-control">
-      <ul class="widget-control">
-        <li><button mat-raised-button (click)="saveAlignment()" color="primary" class="widget-control-button">Save</button>
-            <button mat-raised-button (click)="downloadAlignedFasta()" color="primary" class="widget-control-button">Download FASTA</button>
-            <button mat-raised-button (click)="downloadAlignedJson()" color="primary" class="widget-control-button">Download JSON</button>
-            <button mat-raised-button (click)="downloadPhyloNewick()" color="primary" class="widget-control-button">Download Newick</button>
-        </li>
-        <li><button mat-raised-button (click)="doShowDistanceMatrix()" color="{{ showDistanceMatrixColor }}"
-                    class="widget-control-button">Distance Matrix</button>
-            <button mat-raised-button (click)="doShowChantNetwork()" color="{{ showChantNetworkColor }}"
-                    class="widget-control-button">Chant Network</button>
-            <button mat-raised-button (click)="doShowManuscriptNetwork()" color="{{ showManuscriptNetworkColor }}"
-                    class="widget-control-button">Manuscript Network</button>
-        </li>
-        <li><button mat-raised-button (click)="restrictToContrafacts()" color="primary" class="widget-control-button">Reduce to Contrafacts</button>
-            <button *ngIf="alignmentMode !== 'syllables'" mat-raised-button (click)="doShowGuideTree()" color="{{ showGuideTreeColor }}" class="widget-control-button">Guide Tree</button>
-        </li>
-      </ul>
+    
+    <div class="widget-control-wrapper">
+      <div class="widget-control">
+        <ul class="widget-control">
+          <li><button mat-raised-button (click)="saveAlignment()" color="primary" class="widget-control-button">Save</button>
+              <button mat-raised-button (click)="downloadAlignedFasta()" color="primary" class="widget-control-button">Download FASTA</button>
+              <button mat-raised-button (click)="downloadAlignedJson()" color="primary" class="widget-control-button">Download JSON</button>
+              <button mat-raised-button (click)="downloadPhyloNewick()" color="primary" class="widget-control-button">Download Newick</button>
+          </li>
+          <li><button mat-raised-button (click)="doShowDistanceMatrix()" color="{{ showDistanceMatrixColor }}"
+                      class="widget-control-button">Distance Matrix</button>
+              <button mat-raised-button (click)="doShowChantNetwork()" color="{{ showChantNetworkColor }}"
+                      class="widget-control-button">Chant Network</button>
+              <button mat-raised-button (click)="doShowManuscriptNetwork()" color="{{ showManuscriptNetworkColor }}"
+                      class="widget-control-button">Manuscript Network</button>
+          </li>
+          <li><button mat-raised-button (click)="restrictToContrafacts()" color="primary" class="widget-control-button">Reduce to Contrafacts</button>
+              <button *ngIf="alignmentMode !== 'syllables'" mat-raised-button (click)="doShowGuideTree()" color="{{ showGuideTreeColor }}" class="widget-control-button">Guide Tree</button>
+          </li>
+        </ul>
+      </div>
+      <div class="redirect-widget-control">
+        <ul class="widget-control">
+          <li><button mat-raised-button (click)="openPhylogeneticAnalysis()" color="accent" class="widget-control-button">Phylogenetic Analysis</button>
+          </li>
+        </ul>
+      </div>
     </div>
 
   </div>
