process mrbayes response from backend

--- a/src/app/components/phylogeny-page/phylogeny-page.component.html
+++ b/src/app/components/phylogeny-page/phylogeny-page.component.html
@@ -1,6 +1,6 @@
 <div class="phylogeny-page">
   <app-phylogeny *ngIf="phylogenyResponse; else progressSpinner"
-               [phylogeneticTree]="phylogenyResponse.phylogeneticTree">
+               [phylogeny]="phylogenyResponse">
   </app-phylogeny>
 
   <ng-template #progressSpinner>
