--- a/src/app/components/phylogeny/phylogeny.component.html
+++ b/src/app/components/phylogeny/phylogeny.component.html
@@ -3,7 +3,7 @@
     <button mat-raised-button class="copy-button" color="primary" (click)="copyToClipboard()">Copy</button>
   </div>
   <div>
-    <textarea class="phylogenetic-textarea" id="phylogenetic-textarea" readonly>{{ phylogeneticTree }}</textarea>
+    <textarea class="phylogenetic-textarea" id="phylogenetic-textarea" readonly>{{ phylogeny.newick }}</textarea>
   </div>
 </div>
 
