--- a/src/app/components/settings/settings.component.html
+++ b/src/app/components/settings/settings.component.html
@@ -67,3 +67,26 @@
     </mat-checkbox>
   </mat-card-content>
 </mat-card>
+
+
+<!-- Phylogeny settings -->
+<mat-card class="settings-group">
+  <mat-card-header class="settings-group">
+    <button *ngIf="phylogenySettingsVisible" mat-button class="collapse-button"
+            (click)="phylogenySettingsVisible = !phylogenySettingsVisible">
+      <mat-icon>keyboard_arrow_up</mat-icon>
+    </button>
+    <button *ngIf="!phylogenySettingsVisible" mat-button class="collapse-button"
+            (click)="phylogenySettingsVisible = !phylogenySettingsVisible">
+      <mat-icon>keyboard_arrow_down</mat-icon>
+    </button>
+    <span class="settings-group-name">Phylogeny settings</span>
+  </mat-card-header>
+
+  <mat-card-content *ngIf="phylogenySettingsVisible" class="settings-group">
+    <mat-form-field appearance="fill" class="settings-item" style="width: 300px;">
+      <mat-label>MrBayes - Number of Generations</mat-label>
+      <input matInput type="number" [(ngModel)]="settingsService.phylogenySettingsService.mrbayesGenerations" min="1000" placeholder="Enter number of generations">
+    </mat-form-field>
+  </mat-card-content>
+</mat-card>
