volpiano alignment aligned correctly (keep only notes in volpiano visualization, support visualizing other volpianos characters via checkboxes)

--- a/src/app/components/aligned/aligned.component.css
+++ b/src/app/components/aligned/aligned.component.css
@@ -41,6 +41,7 @@
 .color-checkbox,
 .conservation-checkbox,
 .header-checkbox,
+.wordbars-checkbox,
 .text-checkbox,
 .conservation-indicator {
     margin-left: 20px;
