aligned sequence renaming to be the same as newick/distance matrix sequence names

--- a/src/app/components/aligned/aligned.component.html
+++ b/src/app/components/aligned/aligned.component.html
@@ -109,7 +109,7 @@
                 </div>
                 <button mat-button class="title-button"
                 (click)="showDetail(alignment.ids[volpianoIdx])">
-                    {{ volpianoIdx + ': ' + alignment.sources[volpianoIdx] }}
+                    {{ (volpianoIdx + 1) + ': ' + getSequenceName(alignment.ids[volpianoIdx]) }}
                 </button>
               </div>
               <br>
@@ -145,7 +145,7 @@
                 </div>
                 <button mat-button class="title-button"
                 (click)="showDetail(alignment.ids[volpianoIdx])">
-                  {{ alignment.sources[volpianoIdx] }}
+                  {{ getSequenceName(alignment.ids[volpianoIdx]) }}
                 </button>
               </div>
             </div>
