--- a/src/app/components/visualization/dashboard/dashboard.component.html
+++ b/src/app/components/visualization/dashboard/dashboard.component.html
@@ -1,3 +1,5 @@
+<app-select-data-source></app-select-data-source>
+
 <app-multiple-series-scatterplot
     *ngIf="multiScatterData"
     [chartTitle]="multiScatterTitle"
