--- a/src/app/components/search-filter/search-filter.component.html
+++ b/src/app/components/search-filter/search-filter.component.html
@@ -25,7 +25,8 @@
               <div *ngFor="let item of allGenres | keyvalue; let i = index">
                   <mat-checkbox
                       class="genre-checkbox"
-                      [(ngModel)]="checkedGenres[i]">
+                      [(ngModel)]="checkedGenres[i]"
+                      (ngModelChange)="onSelectionChange()">
                       {{ item.value.name }}
                   </mat-checkbox>
               </div>
@@ -43,7 +44,8 @@
               <div *ngFor="let item of allOffices | keyvalue; let i = index">
                   <mat-checkbox
                       class="office-checkbox"
-                      [(ngModel)]="checkedOffices[i]">
+                      [(ngModel)]="checkedOffices[i]"
+                      (ngModelChange)="onSelectionChange()">
                       {{ item.value.name }}
                   </mat-checkbox>
               </div>
@@ -61,7 +63,8 @@
             <div *ngFor="let item of allFontes; let i = index">
               <mat-checkbox
                 class="fontes-checkbox"
-                [(ngModel)]="checkedFontes[i]">
+                [(ngModel)]="checkedFontes[i]"
+                (ngModelChange)="onSelectionChange()">
                 {{ item }}
               </mat-checkbox>
             </div>
