Rename the chant list page buttons to more intuitive variants

--- a/src/app/components/chant-list/chant-list.component.html
+++ b/src/app/components/chant-list/chant-list.component.html
@@ -22,7 +22,7 @@
         class="margin-right"
         style="margin-left: 50px;"
         [(ngModel)]="concatenatedMode">
-        Concatenated
+        Concatenated alignment
       </mat-checkbox>
 
       <table>
