--- a/src/app/components/search-filter/search-filter.component.html
+++ b/src/app/components/search-filter/search-filter.component.html
@@ -6,7 +6,7 @@
             </button>
             <h2>Filter search</h2>
 
-            <button class="save-filter" mat-stroked-button (click)="saveFilter()">Apply and refresh</button>
+            <button class="save-filter" mat-stroked-button (click)="saveFilter()">Apply filters and refresh</button>
         </div>
 
         <div class="filter-content">
@@ -73,7 +73,7 @@
           </div>
           <br>
 
-          <button mat-stroked-button (click)="saveFilter()">Apply and refresh</button>
+          <button mat-stroked-button (click)="saveFilter()">Apply filters and refresh</button>
         </div>
     </div>
     <div *ngIf="!visible">
@@ -83,7 +83,7 @@
             </button>
             <h2>Filter search</h2>
 
-            <button class="save-filter" mat-stroked-button (click)="saveFilter()">Apply and refresh</button>
+            <button class="save-filter" mat-stroked-button (click)="saveFilter()">Apply filters and refresh</button>
         </div>
     </div>
 </div>
